Update TseAdminHelper