@@ -5,10 +5,7 @@ import uk.gov.hmcts.et.common.model.bulk.types.DynamicFixedListType;
 import uk.gov.hmcts.et.common.model.bulk.types.DynamicValueType;
 import uk.gov.hmcts.et.common.model.ccd.CaseData;
 
-import java.util.stream.Collectors;
-
-import static uk.gov.hmcts.ecm.common.model.helper.Constants.CLOSED_STATE;
-import static uk.gov.hmcts.ecm.common.model.helper.Constants.STORED_STATE;
+import static uk.gov.hmcts.ecm.common.model.helper.Constants.OPEN_STATE;
 
 public final class TseAdminHelper {
 
@@ -27,11 +24,10 @@ public final class TseAdminHelper {
 
         return DynamicFixedListType.from(caseData.getGenericTseApplicationCollection().stream()
             .filter(r -> r.getValue().getStatus() != null
-                && !CLOSED_STATE.equals(r.getValue().getStatus())
-                && !STORED_STATE.equals(r.getValue().getStatus()))
+                && OPEN_STATE.equals(r.getValue().getStatus()))
             .map(r -> DynamicValueType.create(r.getValue().getNumber(),
                 r.getValue().getNumber() + " - " + r.getValue().getType())
             )
-            .collect(Collectors.toList()));
+            .toList());
     }
 }
